// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration Setup Inputs Renders the S3 connector form as expected 1`] = `
<EuiForm>
  <EuiTitle>
    <h1>
      Set Up Integration
    </h1>
  </EuiTitle>
  <EuiSpacer />
  <EuiSpacer />
  <EuiText>
    <h3>
      Integration Details
    </h3>
  </EuiText>
  <EuiSpacer />
  <IntegrationDetailsInputs
    config={
      Object {
        "checkpointLocation": "",
        "connectionDataSource": "ss4o_logs-nginx-test",
        "connectionLocation": "",
        "connectionTableName": "",
        "connectionType": "s3",
        "displayName": "Test Instance Name",
        "enabledWorkflows": Array [],
      }
    }
    integration={
      Object {
        "assets": Array [
          Object {
            "extension": "ndjson",
            "name": "sample",
            "type": "savedObjectBundle",
            "version": "1.0.1",
          },
        ],
        "components": Array [
          Object {
            "name": "logs",
            "version": "1.0.0",
          },
        ],
        "license": "Apache-2.0",
        "name": "sample",
        "type": "logs",
        "version": "2.0.0",
        "workflows": Array [
          Object {
            "description": "This is a test workflow.",
            "enabled_by_default": true,
            "label": "Workflow 1",
            "name": "workflow1",
          },
        ],
      }
    }
    updateConfig={[Function]}
  />
  <EuiSpacer />
  <EuiText>
    <h3>
      Integration Connection
    </h3>
  </EuiText>
  <EuiSpacer />
  <IntegrationConnectionInputs
    config={
      Object {
        "checkpointLocation": "",
        "connectionDataSource": "ss4o_logs-nginx-test",
        "connectionLocation": "",
        "connectionTableName": "",
        "connectionType": "s3",
        "displayName": "Test Instance Name",
        "enabledWorkflows": Array [],
      }
    }
    integration={
      Object {
        "assets": Array [
          Object {
            "extension": "ndjson",
            "name": "sample",
            "type": "savedObjectBundle",
            "version": "1.0.1",
          },
        ],
        "components": Array [
          Object {
            "name": "logs",
            "version": "1.0.0",
          },
        ],
        "license": "Apache-2.0",
        "name": "sample",
        "type": "logs",
        "version": "2.0.0",
        "workflows": Array [
          Object {
            "description": "This is a test workflow.",
            "enabled_by_default": true,
            "label": "Workflow 1",
            "name": "workflow1",
          },
        ],
      }
    }
    updateConfig={[Function]}
  />
  <EuiSpacer />
  <EuiText>
    <h3>
      Query Fields
    </h3>
  </EuiText>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiText
      grow={false}
      size="xs"
    >
      <p>
        To set up the integration, we need to know some information about how to process your data.
      </p>
    </EuiText>
  </EuiCompressedFormRow>
  <EuiSpacer />
  <IntegrationQueryInputs
    config={
      Object {
        "checkpointLocation": "",
        "connectionDataSource": "ss4o_logs-nginx-test",
        "connectionLocation": "",
        "connectionTableName": "",
        "connectionType": "s3",
        "displayName": "Test Instance Name",
        "enabledWorkflows": Array [],
      }
    }
    integration={
      Object {
        "assets": Array [
          Object {
            "extension": "ndjson",
            "name": "sample",
            "type": "savedObjectBundle",
            "version": "1.0.1",
          },
        ],
        "components": Array [
          Object {
            "name": "logs",
            "version": "1.0.0",
          },
        ],
        "license": "Apache-2.0",
        "name": "sample",
        "type": "logs",
        "version": "2.0.0",
        "workflows": Array [
          Object {
            "description": "This is a test workflow.",
            "enabled_by_default": true,
            "label": "Workflow 1",
            "name": "workflow1",
          },
        ],
      }
    }
    updateConfig={[Function]}
  />
  <EuiSpacer />
  <EuiText>
    <h3>
      Integration Resources
    </h3>
  </EuiText>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiText
      grow={false}
      size="xs"
    >
      <p>
        This integration offers different kinds of resources compatible with your data source. These can include dashboards, visualizations, indexes, and queries. Select at least one of the following options.
      </p>
    </EuiText>
  </EuiCompressedFormRow>
  <EuiSpacer />
  <IntegrationWorkflowsInputs
    config={
      Object {
        "checkpointLocation": "",
        "connectionDataSource": "ss4o_logs-nginx-test",
        "connectionLocation": "",
        "connectionTableName": "",
        "connectionType": "s3",
        "displayName": "Test Instance Name",
        "enabledWorkflows": Array [],
      }
    }
    integration={
      Object {
        "assets": Array [
          Object {
            "extension": "ndjson",
            "name": "sample",
            "type": "savedObjectBundle",
            "version": "1.0.1",
          },
        ],
        "components": Array [
          Object {
            "name": "logs",
            "version": "1.0.0",
          },
        ],
        "license": "Apache-2.0",
        "name": "sample",
        "type": "logs",
        "version": "2.0.0",
        "workflows": Array [
          Object {
            "description": "This is a test workflow.",
            "enabled_by_default": true,
            "label": "Workflow 1",
            "name": "workflow1",
          },
        ],
      }
    }
    updateConfig={[Function]}
  />
  <EuiSpacer />
  <EuiSpacer />
</EuiForm>
`;

exports[`Integration Setup Inputs Renders the S3 connector form without workflows 1`] = `
<EuiForm>
  <EuiTitle>
    <h1>
      Set Up Integration
    </h1>
  </EuiTitle>
  <EuiSpacer />
  <EuiSpacer />
  <EuiText>
    <h3>
      Integration Details
    </h3>
  </EuiText>
  <EuiSpacer />
  <IntegrationDetailsInputs
    config={
      Object {
        "checkpointLocation": "",
        "connectionDataSource": "ss4o_logs-nginx-test",
        "connectionLocation": "",
        "connectionTableName": "",
        "connectionType": "s3",
        "displayName": "Test Instance Name",
        "enabledWorkflows": Array [],
      }
    }
    integration={
      Object {
        "assets": Array [
          Object {
            "extension": "ndjson",
            "name": "sample",
            "type": "savedObjectBundle",
            "version": "1.0.1",
          },
        ],
        "components": Array [
          Object {
            "name": "logs",
            "version": "1.0.0",
          },
        ],
        "license": "Apache-2.0",
        "name": "sample",
        "type": "logs",
        "version": "2.0.0",
        "workflows": Array [
          Object {
            "description": "This is a test workflow.",
            "enabled_by_default": true,
            "label": "Workflow 1",
            "name": "workflow1",
          },
        ],
      }
    }
    updateConfig={[Function]}
  />
  <EuiSpacer />
  <EuiText>
    <h3>
      Integration Connection
    </h3>
  </EuiText>
  <EuiSpacer />
  <IntegrationConnectionInputs
    config={
      Object {
        "checkpointLocation": "",
        "connectionDataSource": "ss4o_logs-nginx-test",
        "connectionLocation": "",
        "connectionTableName": "",
        "connectionType": "s3",
        "displayName": "Test Instance Name",
        "enabledWorkflows": Array [],
      }
    }
    integration={
      Object {
        "assets": Array [
          Object {
            "extension": "ndjson",
            "name": "sample",
            "type": "savedObjectBundle",
            "version": "1.0.1",
          },
        ],
        "components": Array [
          Object {
            "name": "logs",
            "version": "1.0.0",
          },
        ],
        "license": "Apache-2.0",
        "name": "sample",
        "type": "logs",
        "version": "2.0.0",
        "workflows": Array [
          Object {
            "description": "This is a test workflow.",
            "enabled_by_default": true,
            "label": "Workflow 1",
            "name": "workflow1",
          },
        ],
      }
    }
    updateConfig={[Function]}
  />
  <EuiSpacer />
  <EuiText>
    <h3>
      Query Fields
    </h3>
  </EuiText>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiText
      grow={false}
      size="xs"
    >
      <p>
        To set up the integration, we need to know some information about how to process your data.
      </p>
    </EuiText>
  </EuiCompressedFormRow>
  <EuiSpacer />
  <IntegrationQueryInputs
    config={
      Object {
        "checkpointLocation": "",
        "connectionDataSource": "ss4o_logs-nginx-test",
        "connectionLocation": "",
        "connectionTableName": "",
        "connectionType": "s3",
        "displayName": "Test Instance Name",
        "enabledWorkflows": Array [],
      }
    }
    integration={
      Object {
        "assets": Array [
          Object {
            "extension": "ndjson",
            "name": "sample",
            "type": "savedObjectBundle",
            "version": "1.0.1",
          },
        ],
        "components": Array [
          Object {
            "name": "logs",
            "version": "1.0.0",
          },
        ],
        "license": "Apache-2.0",
        "name": "sample",
        "type": "logs",
        "version": "2.0.0",
        "workflows": Array [
          Object {
            "description": "This is a test workflow.",
            "enabled_by_default": true,
            "label": "Workflow 1",
            "name": "workflow1",
          },
        ],
      }
    }
    updateConfig={[Function]}
  />
  <EuiSpacer />
  <EuiText>
    <h3>
      Integration Resources
    </h3>
  </EuiText>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiText
      grow={false}
      size="xs"
    >
      <p>
        This integration offers different kinds of resources compatible with your data source. These can include dashboards, visualizations, indexes, and queries. Select at least one of the following options.
      </p>
    </EuiText>
  </EuiCompressedFormRow>
  <EuiSpacer />
  <IntegrationWorkflowsInputs
    config={
      Object {
        "checkpointLocation": "",
        "connectionDataSource": "ss4o_logs-nginx-test",
        "connectionLocation": "",
        "connectionTableName": "",
        "connectionType": "s3",
        "displayName": "Test Instance Name",
        "enabledWorkflows": Array [],
      }
    }
    integration={
      Object {
        "assets": Array [
          Object {
            "extension": "ndjson",
            "name": "sample",
            "type": "savedObjectBundle",
            "version": "1.0.1",
          },
        ],
        "components": Array [
          Object {
            "name": "logs",
            "version": "1.0.0",
          },
        ],
        "license": "Apache-2.0",
        "name": "sample",
        "type": "logs",
        "version": "2.0.0",
        "workflows": Array [
          Object {
            "description": "This is a test workflow.",
            "enabled_by_default": true,
            "label": "Workflow 1",
            "name": "workflow1",
          },
        ],
      }
    }
    updateConfig={[Function]}
  />
  <EuiSpacer />
  <EuiSpacer />
</EuiForm>
`;

exports[`Integration Setup Inputs Renders the connection inputs 1`] = `
<IntegrationConnectionInputs
  config={
    Object {
      "checkpointLocation": "",
      "connectionDataSource": "ss4o_logs-nginx-test",
      "connectionLocation": "",
      "connectionTableName": "",
      "connectionType": "s3",
      "displayName": "Test Instance Name",
      "enabledWorkflows": Array [],
    }
  }
  integration={
    Object {
      "assets": Array [
        Object {
          "extension": "ndjson",
          "name": "sample",
          "type": "savedObjectBundle",
          "version": "1.0.1",
        },
      ],
      "components": Array [
        Object {
          "name": "logs",
          "version": "1.0.0",
        },
      ],
      "license": "Apache-2.0",
      "name": "sample",
      "type": "logs",
      "version": "2.0.0",
      "workflows": Array [
        Object {
          "description": "This is a test workflow.",
          "enabled_by_default": true,
          "label": "Workflow 1",
          "name": "workflow1",
        },
      ],
    }
  }
  updateConfig={[Function]}
>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText="Select the type of connection to use for queries."
    label="Connection Type"
    labelType="label"
  >
    <div
      className="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        className="euiFormRow__labelWrapper"
      >
        <EuiFormLabel
          className="euiFormRow__label"
          htmlFor="random_html_id"
          isFocused={false}
          type="label"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="random_html_id"
          >
            Connection Type
          </label>
        </EuiFormLabel>
      </div>
      <div
        className="euiFormRow__fieldWrapper"
      >
        <EuiCompressedSelect
          aria-describedby="random_html_id-help-0"
          id="random_html_id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          options={
            Array [
              Object {
                "text": "OpenSearch Index",
                "value": "index",
              },
            ]
          }
          value="s3"
        >
          <EuiSelect
            aria-describedby="random_html_id-help-0"
            compressed={true}
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            options={
              Array [
                Object {
                  "text": "OpenSearch Index",
                  "value": "index",
                },
              ]
            }
            value="s3"
          >
            <EuiFormControlLayout
              compressed={true}
              fullWidth={false}
              icon={
                Object {
                  "side": "right",
                  "type": "arrowDown",
                }
              }
              inputId="random_html_id"
              isLoading={false}
            >
              <div
                className="euiFormControlLayout euiFormControlLayout--compressed"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl>
                    <select
                      aria-describedby="random_html_id-help-0"
                      className="euiSelect euiSelect--compressed"
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onMouseUp={[Function]}
                      value="s3"
                    >
                      <option
                        key="0"
                        value="index"
                      >
                        OpenSearch Index
                      </option>
                    </select>
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons
                    compressed={true}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <EuiFormControlLayoutCustomIcon
                        size="s"
                        type="arrowDown"
                      >
                        <span
                          className="euiFormControlLayoutCustomIcon"
                        >
                          <EuiIcon
                            aria-hidden="true"
                            className="euiFormControlLayoutCustomIcon__icon"
                            size="s"
                            type="arrowDown"
                          >
                            <EuiIconBeaker
                              aria-hidden={true}
                              className="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              role="img"
                              style={null}
                            >
                              <svg
                                aria-hidden={true}
                                className="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height={16}
                                role="img"
                                style={null}
                                viewBox="0 0 16 16"
                                width={16}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                />
                              </svg>
                            </EuiIconBeaker>
                          </EuiIcon>
                        </span>
                      </EuiFormControlLayoutCustomIcon>
                    </div>
                  </EuiFormControlLayoutIcons>
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiSelect>
        </EuiCompressedSelect>
        <EuiFormHelpText
          className="euiFormRow__text"
          id="random_html_id-help-0"
          key="Select the type of connection to use for queries."
        >
          <div
            className="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select the type of connection to use for queries.
          </div>
        </EuiFormHelpText>
      </div>
    </div>
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText="Select a data source to pull the data from."
    label="Data Source"
    labelType="label"
  >
    <div
      className="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        className="euiFormRow__labelWrapper"
      >
        <EuiFormLabel
          className="euiFormRow__label"
          htmlFor="random_html_id"
          isFocused={false}
          type="label"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="random_html_id"
          >
            Data Source
          </label>
        </EuiFormLabel>
      </div>
      <div
        className="euiFormRow__fieldWrapper"
      >
        <EuiCompressedComboBox
          aria-describedby="random_html_id-help-0"
          async={false}
          compressed={true}
          customOptionText="Select {searchValue} as your data_source"
          data-test-subj="data-source-name"
          fullWidth={false}
          id="random_html_id"
          isClearable={true}
          isLoading={true}
          onBlur={[Function]}
          onChange={[Function]}
          onCreateOption={[Function]}
          onFocus={[Function]}
          options={Array []}
          selectedOptions={
            Array [
              Object {
                "label": "ss4o_logs-nginx-test",
              },
            ]
          }
          singleSelection={
            Object {
              "asPlainText": true,
            }
          }
          sortMatchesBy="none"
        >
          <div
            aria-describedby="random_html_id-help-0"
            aria-expanded={false}
            aria-haspopup="listbox"
            className="euiComboBox euiComboBox--compressed"
            data-test-subj="data-source-name"
            onKeyDown={[Function]}
            role="combobox"
          >
            <EuiComboBoxInput
              autoSizeInputRef={[Function]}
              compressed={true}
              fullWidth={false}
              hasSelectedOptions={true}
              id="random_html_id"
              inputRef={[Function]}
              isListOpen={false}
              isLoading={true}
              noIcon={false}
              onChange={[Function]}
              onClear={[Function]}
              onClick={[Function]}
              onCloseListClick={[Function]}
              onFocus={[Function]}
              onOpenListClick={[Function]}
              onRemoveOption={[Function]}
              rootId={[Function]}
              searchValue=""
              selectedOptions={
                Array [
                  Object {
                    "label": "ss4o_logs-nginx-test",
                  },
                ]
              }
              singleSelection={
                Object {
                  "asPlainText": true,
                }
              }
              toggleButtonRef={[Function]}
              updatePosition={[Function]}
              value="ss4o_logs-nginx-test"
            >
              <EuiFormControlLayout
                clear={
                  Object {
                    "data-test-subj": "comboBoxClearButton",
                    "onClick": [Function],
                  }
                }
                compressed={true}
                fullWidth={false}
                icon={
                  Object {
                    "aria-label": "Open list of options",
                    "data-test-subj": "comboBoxToggleListButton",
                    "disabled": undefined,
                    "onClick": [Function],
                    "ref": [Function],
                    "side": "right",
                    "type": "arrowDown",
                  }
                }
                isLoading={true}
              >
                <div
                  className="euiFormControlLayout euiFormControlLayout--compressed"
                >
                  <div
                    className="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      className="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isLoading euiComboBox__inputWrap-isClearable"
                      data-test-subj="comboBoxInput"
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <EuiComboBoxPill
                        asPlainText={true}
                        color="hollow"
                        key="ss4o_logs-nginx-test"
                        option={
                          Object {
                            "label": "ss4o_logs-nginx-test",
                          }
                        }
                      >
                        <span
                          className="euiComboBoxPill euiComboBoxPill--plainText"
                        >
                          ss4o_logs-nginx-test
                        </span>
                      </EuiComboBoxPill>
                      <AutosizeInput
                        aria-controls=""
                        className="euiComboBox__input"
                        data-test-subj="comboBoxSearchInput"
                        id="random_html_id"
                        injectStyles={true}
                        inputRef={[Function]}
                        minWidth={1}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        role="textbox"
                        style={
                          Object {
                            "fontSize": 14,
                          }
                        }
                        value=""
                      >
                        <div
                          className="euiComboBox__input"
                          style={
                            Object {
                              "display": "inline-block",
                              "fontSize": 14,
                            }
                          }
                        >
                          <input
                            aria-controls=""
                            data-test-subj="comboBoxSearchInput"
                            id="random_html_id"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            role="textbox"
                            style={
                              Object {
                                "boxSizing": "content-box",
                                "width": "2px",
                              }
                            }
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          />
                        </div>
                      </AutosizeInput>
                    </div>
                    <EuiFormControlLayoutIcons
                      clear={
                        Object {
                          "data-test-subj": "comboBoxClearButton",
                          "onClick": [Function],
                        }
                      }
                      compressed={true}
                      icon={
                        Object {
                          "aria-label": "Open list of options",
                          "data-test-subj": "comboBoxToggleListButton",
                          "disabled": undefined,
                          "onClick": [Function],
                          "ref": [Function],
                          "side": "right",
                          "type": "arrowDown",
                        }
                      }
                      isLoading={true}
                    >
                      <div
                        className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                      >
                        <EuiFormControlLayoutClearButton
                          data-test-subj="comboBoxClearButton"
                          onClick={[Function]}
                          size="s"
                        >
                          <EuiI18n
                            default="Clear input"
                            token="euiFormControlLayoutClearButton.label"
                          >
                            <button
                              aria-label="Clear input"
                              className="euiFormControlLayoutClearButton euiFormControlLayoutClearButton--small"
                              data-test-subj="comboBoxClearButton"
                              onClick={[Function]}
                              type="button"
                            >
                              <EuiIcon
                                className="euiFormControlLayoutClearButton__icon"
                                type="cross"
                              >
                                <EuiIconBeaker
                                  aria-hidden={true}
                                  className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutClearButton__icon"
                                  focusable="false"
                                  role="img"
                                  style={null}
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutClearButton__icon"
                                    focusable="false"
                                    height={16}
                                    role="img"
                                    style={null}
                                    viewBox="0 0 16 16"
                                    width={16}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                    />
                                  </svg>
                                </EuiIconBeaker>
                              </EuiIcon>
                            </button>
                          </EuiI18n>
                        </EuiFormControlLayoutClearButton>
                        <EuiLoadingSpinner
                          size="m"
                        >
                          <span
                            className="euiLoadingSpinner euiLoadingSpinner--medium"
                          />
                        </EuiLoadingSpinner>
                        <EuiFormControlLayoutCustomIcon
                          aria-label="Open list of options"
                          data-test-subj="comboBoxToggleListButton"
                          iconRef={[Function]}
                          onClick={[Function]}
                          size="s"
                          type="arrowDown"
                        >
                          <button
                            aria-label="Open list of options"
                            className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                            data-test-subj="comboBoxToggleListButton"
                            onClick={[Function]}
                            type="button"
                          >
                            <EuiIcon
                              aria-hidden="true"
                              className="euiFormControlLayoutCustomIcon__icon"
                              size="s"
                              type="arrowDown"
                            >
                              <EuiIconBeaker
                                aria-hidden={true}
                                className="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                role="img"
                                style={null}
                              >
                                <svg
                                  aria-hidden={true}
                                  className="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                  focusable="false"
                                  height={16}
                                  role="img"
                                  style={null}
                                  viewBox="0 0 16 16"
                                  width={16}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                  />
                                </svg>
                              </EuiIconBeaker>
                            </EuiIcon>
                          </button>
                        </EuiFormControlLayoutCustomIcon>
                      </div>
                    </EuiFormControlLayoutIcons>
                  </div>
                </div>
              </EuiFormControlLayout>
            </EuiComboBoxInput>
          </div>
        </EuiCompressedComboBox>
        <EuiFormHelpText
          className="euiFormRow__text"
          id="random_html_id-help-0"
          key="Select a data source to pull the data from."
        >
          <div
            className="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select a data source to pull the data from.
          </div>
        </EuiFormHelpText>
      </div>
    </div>
  </EuiCompressedFormRow>
</IntegrationConnectionInputs>
`;

exports[`Integration Setup Inputs Renders the connection inputs with a locked connection type 1`] = `
<IntegrationConnectionInputs
  config={
    Object {
      "checkpointLocation": "",
      "connectionDataSource": "ss4o_logs-nginx-test",
      "connectionLocation": "",
      "connectionTableName": "",
      "connectionType": "s3",
      "displayName": "Test Instance Name",
      "enabledWorkflows": Array [],
    }
  }
  integration={
    Object {
      "assets": Array [
        Object {
          "extension": "ndjson",
          "name": "sample",
          "type": "savedObjectBundle",
          "version": "1.0.1",
        },
      ],
      "components": Array [
        Object {
          "name": "logs",
          "version": "1.0.0",
        },
      ],
      "license": "Apache-2.0",
      "name": "sample",
      "type": "logs",
      "version": "2.0.0",
      "workflows": Array [
        Object {
          "description": "This is a test workflow.",
          "enabled_by_default": true,
          "label": "Workflow 1",
          "name": "workflow1",
        },
      ],
    }
  }
  lockConnectionType={true}
  updateConfig={[Function]}
>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText="Select the type of connection to use for queries."
    label="Connection Type"
    labelType="label"
  >
    <div
      className="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        className="euiFormRow__labelWrapper"
      >
        <EuiFormLabel
          className="euiFormRow__label"
          htmlFor="random_html_id"
          isFocused={false}
          type="label"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="random_html_id"
          >
            Connection Type
          </label>
        </EuiFormLabel>
      </div>
      <div
        className="euiFormRow__fieldWrapper"
      >
        <EuiCompressedSelect
          aria-describedby="random_html_id-help-0"
          disabled={true}
          id="random_html_id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          options={
            Array [
              Object {
                "text": "OpenSearch Index",
                "value": "index",
              },
            ]
          }
          value="s3"
        >
          <EuiSelect
            aria-describedby="random_html_id-help-0"
            compressed={true}
            disabled={true}
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            options={
              Array [
                Object {
                  "text": "OpenSearch Index",
                  "value": "index",
                },
              ]
            }
            value="s3"
          >
            <EuiFormControlLayout
              compressed={true}
              fullWidth={false}
              icon={
                Object {
                  "side": "right",
                  "type": "arrowDown",
                }
              }
              inputId="random_html_id"
              isLoading={false}
            >
              <div
                className="euiFormControlLayout euiFormControlLayout--compressed"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl>
                    <select
                      aria-describedby="random_html_id-help-0"
                      className="euiSelect euiSelect--compressed"
                      disabled={true}
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onMouseUp={[Function]}
                      value="s3"
                    >
                      <option
                        key="0"
                        value="index"
                      >
                        OpenSearch Index
                      </option>
                    </select>
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons
                    compressed={true}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <EuiFormControlLayoutCustomIcon
                        size="s"
                        type="arrowDown"
                      >
                        <span
                          className="euiFormControlLayoutCustomIcon"
                        >
                          <EuiIcon
                            aria-hidden="true"
                            className="euiFormControlLayoutCustomIcon__icon"
                            size="s"
                            type="arrowDown"
                          >
                            <EuiIconArrowDown
                              aria-hidden={true}
                              className="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              role="img"
                              style={null}
                            >
                              <svg
                                aria-hidden={true}
                                className="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height={16}
                                role="img"
                                style={null}
                                viewBox="0 0 16 16"
                                width={16}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                  fillRule="non-zero"
                                />
                              </svg>
                            </EuiIconArrowDown>
                          </EuiIcon>
                        </span>
                      </EuiFormControlLayoutCustomIcon>
                    </div>
                  </EuiFormControlLayoutIcons>
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiSelect>
        </EuiCompressedSelect>
        <EuiFormHelpText
          className="euiFormRow__text"
          id="random_html_id-help-0"
          key="Select the type of connection to use for queries."
        >
          <div
            className="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select the type of connection to use for queries.
          </div>
        </EuiFormHelpText>
      </div>
    </div>
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText="Select a data source to pull the data from."
    label="Data Source"
    labelType="label"
  >
    <div
      className="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        className="euiFormRow__labelWrapper"
      >
        <EuiFormLabel
          className="euiFormRow__label"
          htmlFor="random_html_id"
          isFocused={false}
          type="label"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="random_html_id"
          >
            Data Source
          </label>
        </EuiFormLabel>
      </div>
      <div
        className="euiFormRow__fieldWrapper"
      >
        <EuiCompressedComboBox
          aria-describedby="random_html_id-help-0"
          async={false}
          compressed={true}
          customOptionText="Select {searchValue} as your data_source"
          data-test-subj="data-source-name"
          fullWidth={false}
          id="random_html_id"
          isClearable={true}
          isDisabled={true}
          isLoading={true}
          onBlur={[Function]}
          onChange={[Function]}
          onCreateOption={[Function]}
          onFocus={[Function]}
          options={Array []}
          selectedOptions={
            Array [
              Object {
                "label": "ss4o_logs-nginx-test",
              },
            ]
          }
          singleSelection={
            Object {
              "asPlainText": true,
            }
          }
          sortMatchesBy="none"
        >
          <div
            aria-describedby="random_html_id-help-0"
            aria-expanded={false}
            aria-haspopup="listbox"
            className="euiComboBox euiComboBox--compressed euiComboBox-isDisabled"
            data-test-subj="data-source-name"
            onKeyDown={[Function]}
            role="combobox"
          >
            <EuiComboBoxInput
              autoSizeInputRef={[Function]}
              compressed={true}
              fullWidth={false}
              hasSelectedOptions={true}
              id="random_html_id"
              inputRef={[Function]}
              isDisabled={true}
              isListOpen={false}
              isLoading={true}
              noIcon={false}
              onChange={[Function]}
              onClick={[Function]}
              onCloseListClick={[Function]}
              onFocus={[Function]}
              onOpenListClick={[Function]}
              onRemoveOption={[Function]}
              rootId={[Function]}
              searchValue=""
              selectedOptions={
                Array [
                  Object {
                    "label": "ss4o_logs-nginx-test",
                  },
                ]
              }
              singleSelection={
                Object {
                  "asPlainText": true,
                }
              }
              toggleButtonRef={[Function]}
              updatePosition={[Function]}
              value="ss4o_logs-nginx-test"
            >
              <EuiFormControlLayout
                compressed={true}
                fullWidth={false}
                icon={
                  Object {
                    "aria-label": "Open list of options",
                    "data-test-subj": "comboBoxToggleListButton",
                    "disabled": true,
                    "onClick": [Function],
                    "ref": [Function],
                    "side": "right",
                    "type": "arrowDown",
                  }
                }
                isLoading={true}
              >
                <div
                  className="euiFormControlLayout euiFormControlLayout--compressed"
                >
                  <div
                    className="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      className="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isLoading"
                      data-test-subj="comboBoxInput"
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <EuiComboBoxPill
                        asPlainText={true}
                        color="hollow"
                        key="ss4o_logs-nginx-test"
                        option={
                          Object {
                            "label": "ss4o_logs-nginx-test",
                          }
                        }
                      >
                        <span
                          className="euiComboBoxPill euiComboBoxPill--plainText"
                        >
                          ss4o_logs-nginx-test
                        </span>
                      </EuiComboBoxPill>
                      <AutosizeInput
                        aria-controls=""
                        className="euiComboBox__input"
                        data-test-subj="comboBoxSearchInput"
                        disabled={true}
                        id="random_html_id"
                        injectStyles={true}
                        inputRef={[Function]}
                        minWidth={1}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        role="textbox"
                        style={
                          Object {
                            "fontSize": 14,
                          }
                        }
                        value=""
                      >
                        <div
                          className="euiComboBox__input"
                          style={
                            Object {
                              "display": "inline-block",
                              "fontSize": 14,
                            }
                          }
                        >
                          <input
                            aria-controls=""
                            data-test-subj="comboBoxSearchInput"
                            disabled={true}
                            id="random_html_id"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            role="textbox"
                            style={
                              Object {
                                "boxSizing": "content-box",
                                "width": "2px",
                              }
                            }
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          />
                        </div>
                      </AutosizeInput>
                    </div>
                    <EuiFormControlLayoutIcons
                      compressed={true}
                      icon={
                        Object {
                          "aria-label": "Open list of options",
                          "data-test-subj": "comboBoxToggleListButton",
                          "disabled": true,
                          "onClick": [Function],
                          "ref": [Function],
                          "side": "right",
                          "type": "arrowDown",
                        }
                      }
                      isLoading={true}
                    >
                      <div
                        className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                      >
                        <EuiLoadingSpinner
                          size="m"
                        >
                          <span
                            className="euiLoadingSpinner euiLoadingSpinner--medium"
                          />
                        </EuiLoadingSpinner>
                        <EuiFormControlLayoutCustomIcon
                          aria-label="Open list of options"
                          data-test-subj="comboBoxToggleListButton"
                          disabled={true}
                          iconRef={[Function]}
                          onClick={[Function]}
                          size="s"
                          type="arrowDown"
                        >
                          <button
                            aria-label="Open list of options"
                            className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                            data-test-subj="comboBoxToggleListButton"
                            disabled={true}
                            onClick={[Function]}
                            type="button"
                          >
                            <EuiIcon
                              aria-hidden="true"
                              className="euiFormControlLayoutCustomIcon__icon"
                              size="s"
                              type="arrowDown"
                            >
                              <EuiIconArrowDown
                                aria-hidden={true}
                                className="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                role="img"
                                style={null}
                              >
                                <svg
                                  aria-hidden={true}
                                  className="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                                  focusable="false"
                                  height={16}
                                  role="img"
                                  style={null}
                                  viewBox="0 0 16 16"
                                  width={16}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                    fillRule="non-zero"
                                  />
                                </svg>
                              </EuiIconArrowDown>
                            </EuiIcon>
                          </button>
                        </EuiFormControlLayoutCustomIcon>
                      </div>
                    </EuiFormControlLayoutIcons>
                  </div>
                </div>
              </EuiFormControlLayout>
            </EuiComboBoxInput>
          </div>
        </EuiCompressedComboBox>
        <EuiFormHelpText
          className="euiFormRow__text"
          id="random_html_id-help-0"
          key="Select a data source to pull the data from."
        >
          <div
            className="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select a data source to pull the data from.
          </div>
        </EuiFormHelpText>
      </div>
    </div>
  </EuiCompressedFormRow>
</IntegrationConnectionInputs>
`;

exports[`Integration Setup Inputs Renders the details inputs 1`] = `
<IntegrationDetailsInputs
  config={
    Object {
      "checkpointLocation": "",
      "connectionDataSource": "ss4o_logs-nginx-test",
      "connectionLocation": "",
      "connectionTableName": "",
      "connectionType": "s3",
      "displayName": "Test Instance Name",
      "enabledWorkflows": Array [],
    }
  }
  integration={
    Object {
      "assets": Array [
        Object {
          "extension": "ndjson",
          "name": "sample",
          "type": "savedObjectBundle",
          "version": "1.0.1",
        },
      ],
      "components": Array [
        Object {
          "name": "logs",
          "version": "1.0.0",
        },
      ],
      "license": "Apache-2.0",
      "name": "sample",
      "type": "logs",
      "version": "2.0.0",
      "workflows": Array [
        Object {
          "description": "This is a test workflow.",
          "enabled_by_default": true,
          "label": "Workflow 1",
          "name": "workflow1",
        },
      ],
    }
  }
  updateConfig={[Function]}
>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    error={
      Array [
        "Must be at least 1 character.",
      ]
    }
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label="Display Name"
    labelType="label"
  >
    <div
      className="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        className="euiFormRow__labelWrapper"
      >
        <EuiFormLabel
          aria-invalid={false}
          className="euiFormRow__label"
          htmlFor="random_html_id"
          isFocused={false}
          isInvalid={false}
          type="label"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="random_html_id"
          >
            Display Name
          </label>
        </EuiFormLabel>
      </div>
      <div
        className="euiFormRow__fieldWrapper"
      >
        <EuiCompressedFieldText
          data-test-subj="new-instance-name"
          id="random_html_id"
          isInvalid={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="sample Integration"
          value="Test Instance Name"
        >
          <EuiFieldText
            compressed={true}
            data-test-subj="new-instance-name"
            id="random_html_id"
            isInvalid={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="sample Integration"
            value="Test Instance Name"
          >
            <EuiFormControlLayout
              compressed={true}
              fullWidth={false}
              inputId="random_html_id"
            >
              <div
                className="euiFormControlLayout euiFormControlLayout--compressed"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl
                    isInvalid={false}
                  >
                    <input
                      className="euiFieldText euiFieldText--compressed"
                      data-test-subj="new-instance-name"
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder="sample Integration"
                      type="text"
                      value="Test Instance Name"
                    />
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons
                    compressed={true}
                  />
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiFieldText>
        </EuiCompressedFieldText>
      </div>
    </div>
  </EuiCompressedFormRow>
</IntegrationDetailsInputs>
`;

exports[`Integration Setup Inputs Renders the index form as expected 1`] = `
<EuiForm>
  <EuiTitle>
    <h1>
      Set Up Integration
    </h1>
  </EuiTitle>
  <EuiSpacer />
  <EuiSpacer />
  <EuiText>
    <h3>
      Integration Details
    </h3>
  </EuiText>
  <EuiSpacer />
  <IntegrationDetailsInputs
    config={
      Object {
        "checkpointLocation": "",
        "connectionDataSource": "ss4o_logs-nginx-test",
        "connectionLocation": "",
        "connectionTableName": "",
        "connectionType": "index",
        "displayName": "Test Instance Name",
        "enabledWorkflows": Array [],
      }
    }
    integration={
      Object {
        "assets": Array [
          Object {
            "extension": "ndjson",
            "name": "sample",
            "type": "savedObjectBundle",
            "version": "1.0.1",
          },
        ],
        "components": Array [
          Object {
            "name": "logs",
            "version": "1.0.0",
          },
        ],
        "license": "Apache-2.0",
        "name": "sample",
        "type": "logs",
        "version": "2.0.0",
        "workflows": Array [
          Object {
            "description": "This is a test workflow.",
            "enabled_by_default": true,
            "label": "Workflow 1",
            "name": "workflow1",
          },
        ],
      }
    }
    updateConfig={[Function]}
  />
  <EuiSpacer />
  <EuiText>
    <h3>
      Integration Connection
    </h3>
  </EuiText>
  <EuiSpacer />
  <IntegrationConnectionInputs
    config={
      Object {
        "checkpointLocation": "",
        "connectionDataSource": "ss4o_logs-nginx-test",
        "connectionLocation": "",
        "connectionTableName": "",
        "connectionType": "index",
        "displayName": "Test Instance Name",
        "enabledWorkflows": Array [],
      }
    }
    integration={
      Object {
        "assets": Array [
          Object {
            "extension": "ndjson",
            "name": "sample",
            "type": "savedObjectBundle",
            "version": "1.0.1",
          },
        ],
        "components": Array [
          Object {
            "name": "logs",
            "version": "1.0.0",
          },
        ],
        "license": "Apache-2.0",
        "name": "sample",
        "type": "logs",
        "version": "2.0.0",
        "workflows": Array [
          Object {
            "description": "This is a test workflow.",
            "enabled_by_default": true,
            "label": "Workflow 1",
            "name": "workflow1",
          },
        ],
      }
    }
    updateConfig={[Function]}
  />
</EuiForm>
`;

exports[`Integration Setup Inputs Renders the query inputs 1`] = `
<IntegrationQueryInputs
  config={
    Object {
      "checkpointLocation": "",
      "connectionDataSource": "ss4o_logs-nginx-test",
      "connectionLocation": "",
      "connectionTableName": "",
      "connectionType": "s3",
      "displayName": "Test Instance Name",
      "enabledWorkflows": Array [],
    }
  }
  integration={
    Object {
      "assets": Array [
        Object {
          "extension": "ndjson",
          "name": "sample",
          "type": "savedObjectBundle",
          "version": "1.0.1",
        },
      ],
      "components": Array [
        Object {
          "name": "logs",
          "version": "1.0.0",
        },
      ],
      "license": "Apache-2.0",
      "name": "sample",
      "type": "logs",
      "version": "2.0.0",
      "workflows": Array [
        Object {
          "description": "This is a test workflow.",
          "enabled_by_default": true,
          "label": "Workflow 1",
          "name": "workflow1",
        },
      ],
    }
  }
  updateConfig={[Function]}
>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    error={
      Array [
        "Must be at least 1 character.",
      ]
    }
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText="Select a table name to associate with your data."
    isInvalid={true}
    label="Spark Table Name"
    labelType="label"
  >
    <div
      className="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        className="euiFormRow__labelWrapper"
      >
        <EuiFormLabel
          aria-invalid={true}
          className="euiFormRow__label"
          htmlFor="random_html_id"
          isFocused={false}
          isInvalid={true}
          type="label"
        >
          <label
            aria-invalid={true}
            className="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
            htmlFor="random_html_id"
          >
            Spark Table Name
          </label>
        </EuiFormLabel>
      </div>
      <div
        className="euiFormRow__fieldWrapper"
      >
        <EuiCompressedFieldText
          aria-describedby="random_html_id-help-0 random_html_id-error-0"
          id="random_html_id"
          isInvalid={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="sample"
          value=""
        >
          <EuiFieldText
            aria-describedby="random_html_id-help-0 random_html_id-error-0"
            compressed={true}
            id="random_html_id"
            isInvalid={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="sample"
            value=""
          >
            <EuiFormControlLayout
              compressed={true}
              fullWidth={false}
              inputId="random_html_id"
            >
              <div
                className="euiFormControlLayout euiFormControlLayout--compressed"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl
                    isInvalid={true}
                  >
                    <input
                      aria-describedby="random_html_id-help-0 random_html_id-error-0"
                      className="euiFieldText euiFieldText--compressed"
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder="sample"
                      type="text"
                      value=""
                    />
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons
                    compressed={true}
                  />
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiFieldText>
        </EuiCompressedFieldText>
        <EuiFormErrorText
          className="euiFormRow__text"
          id="random_html_id-error-0"
          key="Must be at least 1 character."
        >
          <div
            aria-live="polite"
            className="euiFormErrorText euiFormRow__text"
            id="random_html_id-error-0"
          >
            Must be at least 1 character.
          </div>
        </EuiFormErrorText>
        <EuiFormHelpText
          className="euiFormRow__text"
          id="random_html_id-help-0"
          key="Select a table name to associate with your data."
        >
          <div
            className="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select a table name to associate with your data.
          </div>
        </EuiFormHelpText>
      </div>
    </div>
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    error={
      Array [
        "Must be a URL starting with 's3://'.",
      ]
    }
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label="S3 Data Location"
    labelType="label"
  >
    <div
      className="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        className="euiFormRow__labelWrapper"
      >
        <EuiFormLabel
          aria-invalid={false}
          className="euiFormRow__label"
          htmlFor="random_html_id"
          isFocused={false}
          isInvalid={false}
          type="label"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="random_html_id"
          >
            S3 Data Location
          </label>
        </EuiFormLabel>
      </div>
      <div
        className="euiFormRow__fieldWrapper"
      >
        <EuiCompressedFieldText
          id="random_html_id"
          isInvalid={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="s3://"
          value=""
        >
          <EuiFieldText
            compressed={true}
            id="random_html_id"
            isInvalid={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="s3://"
            value=""
          >
            <EuiFormControlLayout
              compressed={true}
              fullWidth={false}
              inputId="random_html_id"
            >
              <div
                className="euiFormControlLayout euiFormControlLayout--compressed"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl
                    isInvalid={false}
                  >
                    <input
                      className="euiFieldText euiFieldText--compressed"
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder="s3://"
                      type="text"
                      value=""
                    />
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons
                    compressed={true}
                  />
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiFieldText>
        </EuiCompressedFieldText>
      </div>
    </div>
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    error={
      Array [
        "Must be a URL starting with 's3://'.",
      ]
    }
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText="The Checkpoint location must be a unique directory and not the same as the Data location. It will be used for caching intermediary results."
    isInvalid={false}
    label="S3 Checkpoint Location"
    labelType="label"
  >
    <div
      className="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        className="euiFormRow__labelWrapper"
      >
        <EuiFormLabel
          aria-invalid={false}
          className="euiFormRow__label"
          htmlFor="random_html_id"
          isFocused={false}
          isInvalid={false}
          type="label"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="random_html_id"
          >
            S3 Checkpoint Location
          </label>
        </EuiFormLabel>
      </div>
      <div
        className="euiFormRow__fieldWrapper"
      >
        <EuiCompressedFieldText
          aria-describedby="random_html_id-help-0"
          id="random_html_id"
          isInvalid={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="s3://"
          value=""
        >
          <EuiFieldText
            aria-describedby="random_html_id-help-0"
            compressed={true}
            id="random_html_id"
            isInvalid={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="s3://"
            value=""
          >
            <EuiFormControlLayout
              compressed={true}
              fullWidth={false}
              inputId="random_html_id"
            >
              <div
                className="euiFormControlLayout euiFormControlLayout--compressed"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl
                    isInvalid={false}
                  >
                    <input
                      aria-describedby="random_html_id-help-0"
                      className="euiFieldText euiFieldText--compressed"
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder="s3://"
                      type="text"
                      value=""
                    />
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons
                    compressed={true}
                  />
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiFieldText>
        </EuiCompressedFieldText>
        <EuiFormHelpText
          className="euiFormRow__text"
          id="random_html_id-help-0"
          key="The Checkpoint location must be a unique directory and not the same as the Data location. It will be used for caching intermediary results."
        >
          <div
            className="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            The Checkpoint location must be a unique directory and not the same as the Data location. It will be used for caching intermediary results.
          </div>
        </EuiFormHelpText>
      </div>
    </div>
  </EuiCompressedFormRow>
</IntegrationQueryInputs>
`;

exports[`Integration Setup Inputs Renders the workflows inputs 1`] = `
<IntegrationWorkflowsInputs
  config={
    Object {
      "checkpointLocation": "",
      "connectionDataSource": "ss4o_logs-nginx-test",
      "connectionLocation": "",
      "connectionTableName": "",
      "connectionType": "index",
      "displayName": "Test Instance Name",
      "enabledWorkflows": Array [],
    }
  }
  integration={
    Object {
      "assets": Array [
        Object {
          "extension": "ndjson",
          "name": "sample",
          "type": "savedObjectBundle",
          "version": "1.0.1",
        },
      ],
      "components": Array [
        Object {
          "name": "logs",
          "version": "1.0.0",
        },
      ],
      "license": "Apache-2.0",
      "name": "sample",
      "type": "logs",
      "version": "2.0.0",
      "workflows": Array [
        Object {
          "description": "This is a test workflow.",
          "enabled_by_default": true,
          "label": "Workflow 1",
          "name": "workflow1",
        },
      ],
    }
  }
  updateConfig={[Function]}
>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    error={
      Array [
        "Must select at least one workflow.",
      ]
    }
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    labelType="label"
  >
    <div
      className="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        className="euiFormRow__fieldWrapper"
      >
        <SetupWorkflowSelector
          config={
            Object {
              "checkpointLocation": "",
              "connectionDataSource": "ss4o_logs-nginx-test",
              "connectionLocation": "",
              "connectionTableName": "",
              "connectionType": "index",
              "displayName": "Test Instance Name",
              "enabledWorkflows": Array [],
            }
          }
          id="random_html_id"
          integration={
            Object {
              "assets": Array [
                Object {
                  "extension": "ndjson",
                  "name": "sample",
                  "type": "savedObjectBundle",
                  "version": "1.0.1",
                },
              ],
              "components": Array [
                Object {
                  "name": "logs",
                  "version": "1.0.0",
                },
              ],
              "license": "Apache-2.0",
              "name": "sample",
              "type": "logs",
              "version": "2.0.0",
              "workflows": Array [
                Object {
                  "description": "This is a test workflow.",
                  "enabled_by_default": true,
                  "label": "Workflow 1",
                  "name": "workflow1",
                },
              ],
            }
          }
          onBlur={[Function]}
          onFocus={[Function]}
          toggleWorkflow={[Function]}
          useWorkflows={
            Array [
              Array [
                "workflow1",
                true,
              ],
            ]
          }
        >
          <EuiCheckableCard
            checkableType="checkbox"
            checked={true}
            id="workflow-checkbox-workflow1"
            key="workflow1"
            label="Workflow 1"
            onChange={[Function]}
            value="workflow1"
          >
            <_EuiSplitPanelOuter
              className="euiCheckableCard euiCheckableCard-isChecked"
              direction="row"
              hasBorder={true}
              responsive={false}
            >
              <EuiPanel
                className="euiSplitPanel euiSplitPanel--row euiCheckableCard euiCheckableCard-isChecked"
                grow={false}
                hasBorder={true}
                paddingSize="none"
              >
                <div
                  className="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard euiCheckableCard-isChecked"
                >
                  <_EuiSplitPanelInner
                    color="primary"
                    grow={false}
                    onClick={[Function]}
                  >
                    <EuiPanel
                      borderRadius="none"
                      className="euiSplitPanel__inner"
                      color="primary"
                      element="div"
                      grow={false}
                      hasBorder={false}
                      hasShadow={false}
                      onClick={[Function]}
                    >
                      <div
                        className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--primary euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
                        onClick={[Function]}
                      >
                        <EuiCheckbox
                          checked={true}
                          compressed={false}
                          disabled={false}
                          id="workflow-checkbox-workflow1"
                          indeterminate={false}
                          onChange={[Function]}
                          value="workflow1"
                        >
                          <div
                            className="euiCheckbox euiCheckbox--noLabel"
                          >
                            <input
                              checked={true}
                              className="euiCheckbox__input"
                              disabled={false}
                              id="workflow-checkbox-workflow1"
                              onChange={[Function]}
                              type="checkbox"
                              value="workflow1"
                            />
                            <div
                              className="euiCheckbox__square"
                            />
                          </div>
                        </EuiCheckbox>
                      </div>
                    </EuiPanel>
                  </_EuiSplitPanelInner>
                  <_EuiSplitPanelInner>
                    <EuiPanel
                      borderRadius="none"
                      className="euiSplitPanel__inner"
                      color="transparent"
                      element="div"
                      hasBorder={false}
                      hasShadow={false}
                    >
                      <div
                        className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                      >
                        <label
                          aria-describedby="workflow-checkbox-workflow1-details"
                          className="euiCheckableCard__label"
                          htmlFor="workflow-checkbox-workflow1"
                        >
                          Workflow 1
                        </label>
                        <div
                          className="euiCheckableCard__children"
                          id="workflow-checkbox-workflow1-details"
                        >
                          This is a test workflow.
                        </div>
                      </div>
                    </EuiPanel>
                  </_EuiSplitPanelInner>
                </div>
              </EuiPanel>
            </_EuiSplitPanelOuter>
          </EuiCheckableCard>
        </SetupWorkflowSelector>
      </div>
    </div>
  </EuiCompressedFormRow>
</IntegrationWorkflowsInputs>
`;

exports[`Integration Setup Inputs Renders the workflows inputs with conditional workflows 1`] = `
<IntegrationWorkflowsInputs
  config={
    Object {
      "checkpointLocation": "",
      "connectionDataSource": "ss4o_logs-nginx-test",
      "connectionLocation": "",
      "connectionTableName": "",
      "connectionType": "s3",
      "displayName": "Test Instance Name",
      "enabledWorkflows": Array [],
    }
  }
  integration={
    Object {
      "assets": Array [
        Object {
          "extension": "ndjson",
          "name": "sample",
          "type": "savedObjectBundle",
          "version": "1.0.1",
        },
      ],
      "components": Array [
        Object {
          "name": "logs",
          "version": "1.0.0",
        },
      ],
      "license": "Apache-2.0",
      "name": "sample",
      "type": "logs",
      "version": "2.0.0",
      "workflows": Array [
        Object {
          "description": "This is a test workflow.",
          "enabled_by_default": true,
          "label": "Workflow 1",
          "name": "workflow1",
        },
        Object {
          "applicable_data_sources": Array [
            "index",
          ],
          "description": "This should not render.",
          "enabled_by_default": true,
          "label": "Workflow 2",
          "name": "workflow2",
        },
      ],
    }
  }
  updateConfig={[Function]}
>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    error={
      Array [
        "Must select at least one workflow.",
      ]
    }
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    labelType="label"
  >
    <div
      className="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        className="euiFormRow__fieldWrapper"
      >
        <SetupWorkflowSelector
          config={
            Object {
              "checkpointLocation": "",
              "connectionDataSource": "ss4o_logs-nginx-test",
              "connectionLocation": "",
              "connectionTableName": "",
              "connectionType": "s3",
              "displayName": "Test Instance Name",
              "enabledWorkflows": Array [],
            }
          }
          id="random_html_id"
          integration={
            Object {
              "assets": Array [
                Object {
                  "extension": "ndjson",
                  "name": "sample",
                  "type": "savedObjectBundle",
                  "version": "1.0.1",
                },
              ],
              "components": Array [
                Object {
                  "name": "logs",
                  "version": "1.0.0",
                },
              ],
              "license": "Apache-2.0",
              "name": "sample",
              "type": "logs",
              "version": "2.0.0",
              "workflows": Array [
                Object {
                  "description": "This is a test workflow.",
                  "enabled_by_default": true,
                  "label": "Workflow 1",
                  "name": "workflow1",
                },
                Object {
                  "applicable_data_sources": Array [
                    "index",
                  ],
                  "description": "This should not render.",
                  "enabled_by_default": true,
                  "label": "Workflow 2",
                  "name": "workflow2",
                },
              ],
            }
          }
          onBlur={[Function]}
          onFocus={[Function]}
          toggleWorkflow={[Function]}
          useWorkflows={
            Array [
              Array [
                "workflow1",
                true,
              ],
              Array [
                "workflow2",
                true,
              ],
            ]
          }
        >
          <EuiCheckableCard
            checkableType="checkbox"
            checked={true}
            id="workflow-checkbox-workflow1"
            key="workflow1"
            label="Workflow 1"
            onChange={[Function]}
            value="workflow1"
          >
            <_EuiSplitPanelOuter
              className="euiCheckableCard euiCheckableCard-isChecked"
              direction="row"
              hasBorder={true}
              responsive={false}
            >
              <EuiPanel
                className="euiSplitPanel euiSplitPanel--row euiCheckableCard euiCheckableCard-isChecked"
                grow={false}
                hasBorder={true}
                paddingSize="none"
              >
                <div
                  className="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard euiCheckableCard-isChecked"
                >
                  <_EuiSplitPanelInner
                    color="primary"
                    grow={false}
                    onClick={[Function]}
                  >
                    <EuiPanel
                      borderRadius="none"
                      className="euiSplitPanel__inner"
                      color="primary"
                      element="div"
                      grow={false}
                      hasBorder={false}
                      hasShadow={false}
                      onClick={[Function]}
                    >
                      <div
                        className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--primary euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
                        onClick={[Function]}
                      >
                        <EuiCheckbox
                          checked={true}
                          compressed={false}
                          disabled={false}
                          id="workflow-checkbox-workflow1"
                          indeterminate={false}
                          onChange={[Function]}
                          value="workflow1"
                        >
                          <div
                            className="euiCheckbox euiCheckbox--noLabel"
                          >
                            <input
                              checked={true}
                              className="euiCheckbox__input"
                              disabled={false}
                              id="workflow-checkbox-workflow1"
                              onChange={[Function]}
                              type="checkbox"
                              value="workflow1"
                            />
                            <div
                              className="euiCheckbox__square"
                            />
                          </div>
                        </EuiCheckbox>
                      </div>
                    </EuiPanel>
                  </_EuiSplitPanelInner>
                  <_EuiSplitPanelInner>
                    <EuiPanel
                      borderRadius="none"
                      className="euiSplitPanel__inner"
                      color="transparent"
                      element="div"
                      hasBorder={false}
                      hasShadow={false}
                    >
                      <div
                        className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                      >
                        <label
                          aria-describedby="workflow-checkbox-workflow1-details"
                          className="euiCheckableCard__label"
                          htmlFor="workflow-checkbox-workflow1"
                        >
                          Workflow 1
                        </label>
                        <div
                          className="euiCheckableCard__children"
                          id="workflow-checkbox-workflow1-details"
                        >
                          This is a test workflow.
                        </div>
                      </div>
                    </EuiPanel>
                  </_EuiSplitPanelInner>
                </div>
              </EuiPanel>
            </_EuiSplitPanelOuter>
          </EuiCheckableCard>
        </SetupWorkflowSelector>
      </div>
    </div>
  </EuiCompressedFormRow>
</IntegrationWorkflowsInputs>
`;
